<resources>
    <string name="app_name">PayWorks</string>

    <!-- Strings related to login -->
    <string name="prompt_email">  Enter your mobile number/Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Next</string>
    <string name="action_register">Register</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_registration">REGISTRATION</string>
    <string name="action_submit">Submit</string>
    <string name="action_sign_in_google">Login with google</string>
    <string name="action_sign_in_facebook">Login with facebook</string>
    <string name="google_login_failed">Google login failed.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="google_app_id">AIzaSyCcin2bhx-1FF10wB_IBUbB-GTfqB6ALRQ</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_navigational">WELCOME</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1803588002984563</string>
    <string name="fb_login_protocol_scheme">fb1803588002984563</string>
    <string name="hint_user_first_name">Enter first name</string>
    <string name="hint_user_last_name">Enter last name</string>
    <string name="hint_user_phone_num">Enter Phone No </string>
    <string name="hint_user_phone_num_registration">Enter Phone with code </string>
    <string name="hint_email">Enter email id</string>
    <string name="hint_address">Address</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_country">Enter country</string>
    <string name="error_compulsory_field">This field is compulsory</string>
    <string name="error_small_value">Withdrawal Limit $10-$10000</string>
    <string name="error_one_compulsory_field">One field is compulsory</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="click_here">click here</string>
    <string name="transactions">Transactions</string>
    <string name="received_request">Received Requests</string>
    <string name="send_money">Send Money</string>
    <string name="add_money">Add Money</string>
    <string name="request_money">Request Money</string>
    <string name="check_for_latest_offers">Check for latest offers</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_coupon_code_optional">Enter coupon code(Optional)</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="add_money_title">ADD MONEY</string>
    <string name="edit_profile_title">EDIT PROFILE</string>
    <string name="add_bank_account">ADD BANK ACCOUNT</string>
    <string name="otp_verification_title">OTP Verification</string>
    <string name="received_money_request_title">RECEIVED REQUESTS</string>
    <string name="add_card_Details_title">ADD CARD DETAILS</string>
    <string name="my_product">MY PRODUCTS</string>
    <string name="we_accept">We accept:</string>
    <string name="refer_a_friend">Refer a friend</string>
    <string name="refer_a_friend_to_payworks">Refer a friend to Payworks.You and your friend will get $10 on first transaction.</string>
    <string name="my_products">My Products</string>
    <string name="add_products">Add Products</string>
    <string name="add_donation">Add Donations</string>
    <string name="add_subscriptions">Add Subscription</string>
    <string name="add_invoices">Add Invoice</string>
    <string name="add_tickets">Add Tickets</string>

    <string name="edit_products">Edit Products</string>
    <string name="edit_donation">Edit Donations</string>
    <string name="edit_subscriptions">Edit Subscription</string>
    <string name="edit_invoices">Edit Invoice</string>
    <string name="edit_tickets">Edit Tickets</string>

    <string name="my_invoices">My Invoices</string>
    <string name="my_tickets">My Tickets</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="my_donations">My Donations</string>
    <string name="no_data_available">No Transactions</string>
    <string name="product_name">Product Name</string>
    <string name="donation_name">Donation Name</string>
    <string name="invoice_name">Invoice Name</string>
    <string name="ticketname">Ticket Name</string>
    <string name="names_search">Name</string>
    <string name="request_money_please_fill_the_details_below">Please fill the Details Below</string>
    <string name="enter_email_phone_number">Enter Email Address</string>
    <string name="add_request_amount">Add Amount</string>
    <string name="user_priority">Priority</string>
    <string name="due_date">Due Date</string>
    <string name="comment_optional">Comment</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add_amount">Add Amount</string>
    <string name="hint_enter_state">Enter State</string>
    <string name="enter_country">Enter Country</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="save_card">Save card</string>
    <string name="todo">TODO</string>
    <string name="pay">Pay</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="add_bio">Enter Bio</string>
    <string name="enter_tin_number">Enter Tin Number</string>
    <string name="nib_passport">Enter NIB/Passport</string>
    <string name="enter_user_city">Enter City</string>
    <string name="enter_zip">Enter Zip</string>
    <string name="enter_title">Enter Title</string>
    <string name="camera">Camera</string>
    <string name="docs">Docs</string>
    <string name="gallery">Gallery</string>
    <string name="show_more">Show more</string>
    <string name="welcome_to_payworks_tm">Welcome to PayWorks TM</string>
    <string name="donation_text">Add a \'0\' to allow donor to donate their own amount.</string>
    <string name="company_name">Enter Company Name</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_city">Bank City</string>
    <string name="bank_zip">Bank Zip</string>
    <string name="bank_phone">Bank Phone</string>
    <string name="account_holder_name">Account Holder</string>
    <string name="account_number">Account Number</string>
    <string name="bank_address">Bank Address</string>
    <string name="enter_the_address">Enter Address</string>

    <string-array name="priority_array">
        <item>Normal</item>
        <item>High</item>
        <item>Low</item>

    </string-array>


    <string-array name="card_type">
        <item>MasterCard</item>
        <item>VISA</item>
    </string-array>


    <string-array name="account_type">
        <item>Business Checking</item>
        <item>Business Saving</item>
        <item>Personal Checking</item>
        <item>Personal Saving</item>
    </string-array>
</resources>
