<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.payworks.ui.activities.EditProfileActivity">


    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/profile_bg"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person_image"
            android:layout_width="@dimen/edit_profile_circle_image_view_width"
            android:layout_height="@dimen/edit_profile_circle_image_view_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/new_customer_icon"
            app:civ_fill_color="@color/lighter_gray"></de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/upload_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/person_image"
            android:layout_centerHorizontal="true"
            android:textColor="@color/theme_primary_dark"
            android:padding="5dp"
            android:text="Edit Photo" />

    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">


    <EditText
        android:id="@+id/user_first_name"
        android:layout_marginStart="20dp"
        android:layout_width="140dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:paddingTop="-5dp"
        android:layout_alignParentStart="true"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/hint_user_first_name"
        />




    <EditText
        android:id="@+id/user_last_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:layout_alignParentEnd="true"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/hint_user_last_name"
        />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
        android:id="@+id/user_phone_num"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="140dp"
            android:inputType="phone"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/hint_user_phone_num"

        />

            <EditText
                android:id="@+id/user_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textColor="@color/text_color"
                android:lines="1"
                android:layout_alignParentEnd="true"
                android:textSize="15sp"
                android:hint="@string/enter_title"

                />

        </RelativeLayout>



    <EditText
        android:id="@+id/user_email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:hint="@string/hint_email"
        />
    <EditText
        android:id="@+id/user_address"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/hint_address"
        />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >


            <EditText
                android:id="@+id/user_city"
                android:layout_marginStart="20dp"
                android:layout_width="140dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_alignParentStart="true"
                android:textColor="@color/text_color"
                android:lines="1"
                android:textSize="15sp"
                android:hint="@string/enter_user_city"
                />




            <EditText
                android:id="@+id/user_zip"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:textColor="@color/text_color"
                android:lines="1"
                android:textSize="15sp"
                android:hint="@string/enter_zip"
                />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >


            <EditText
                android:id="@+id/user_passport"
                android:layout_marginStart="20dp"
                android:layout_width="140dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_alignParentStart="true"
                android:textColor="@color/text_color"
                android:lines="1"
                android:textSize="15sp"
                android:hint="@string/nib_passport"
                />




            <EditText
                android:id="@+id/user_tin_number"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_alignParentEnd="true"
                android:textColor="@color/text_color"
                android:lines="1"
                android:textSize="15sp"
                android:hint="@string/enter_tin_number"
                />

        </RelativeLayout>

        <EditText
            android:id="@+id/user_bio"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:lines="2"
            android:textSize="15sp"
            android:padding="10dp"
            android:gravity="top"
            android:background="@drawable/rectangular_background"
            android:hint="@string/add_bio"


            />


    </LinearLayout>
    </ScrollView>

        <Button
            android:id="@+id/submit"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@drawable/button_state_selector"
            android:text="@string/action_submit"
            android:textStyle="bold" />
    </RelativeLayout>



</LinearLayout>

