<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.payworks.ui.activities.RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"

        >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person_image"
        android:layout_width="@dimen/edit_profile_circle_image_view_width"
        android:layout_height="@dimen/edit_profile_circle_image_view_height"
        android:src="@drawable/new_customer_icon"
        app:civ_fill_color="@color/lighter_gray"
        android:layout_centerHorizontal="true"></de.hdodenhof.circleimageview.CircleImageView>

        <TextView
            android:id="@+id/upload_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Upload Image(Optional)"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangular_background"/>

    </RelativeLayout>


    <EditText
        android:id="@+id/user_phone_num"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="12sp"
        android:background="@drawable/rectangular_background"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_user_phone_num"/>



    <EditText
        android:id="@+id/user_first_name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangular_background"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_user_first_name"/>



    <EditText
        android:id="@+id/user_last_name"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:lines="1"
        android:textColor="@color/text_color"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangular_background"
        android:hint="@string/hint_user_last_name"
        android:inputType="textEmailAddress" />



    <EditText
        android:id="@+id/user_email"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:lines="1"
        android:textColor="@color/text_color"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:background="@drawable/rectangular_background"
        android:hint="@string/hint_email"
        android:layout_gravity="center_horizontal"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/user_password"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:textStyle="normal"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="12sp"
        android:background="@drawable/rectangular_background"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_password"/>



    <EditText
        android:id="@+id/user_country"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:lines="1"
        android:textColor="@color/text_color"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:background="@drawable/rectangular_background"
        android:hint="@string/hint_country"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/register_account"
        style="?android:textAppearanceSmall"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/action_register"
        android:textStyle="bold" />


</LinearLayout>
