<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/all_screens_bg"
    tools:context="com.payworks.ui.activities.RequestMoneyActivity">


    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/request_money_please_fill_the_details_below"/>


    <EditText
        android:id="@+id/user_email_phone_name"
        android:layout_marginStart="20dp"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/enter_email_phone_number"
        />


    <EditText
        android:id="@+id/user_add_amount"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:inputType="number"
        android:hint="@string/add_request_amount"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

    <AutoCompleteTextView
        android:id="@+id/user_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="1"
        android:focusable="false"
        android:textSize="15sp"
        android:gravity="bottom"
        android:hint="@string/user_priority"

        />

    <ImageView
        android:id="@+id/icon"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_width="40dp"
        android:layout_alignParentEnd="true"
        android:padding="4dp"
        android:layout_height="40dp" />

    </RelativeLayout>



<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">

    <EditText
        android:id="@+id/user_Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:gravity="bottom"
        android:inputType="date"
        android:focusable="false"
        android:textColor="@color/text_color"
        android:lines="1"
        android:textSize="15sp"
        android:hint="@string/due_date"
        />

    <ImageView
        android:id="@+id/username_icon"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_width="40dp"
        android:layout_alignParentEnd="true"
        android:padding="4dp"
        android:layout_height="40dp" />

</RelativeLayout>

    <EditText
        android:id="@+id/user_comment"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textColor="@color/text_color"
        android:lines="5"
        android:textSize="15sp"
        android:padding="10dp"
        android:gravity="top"
        android:background="@drawable/rectangular_background"
        android:hint="@string/comment_optional"


        />
    <Button
        android:id="@+id/submit"
        style="?android:textAppearanceSmall"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_state_selector"
        android:text="REQUEST MONEY"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>

