<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_screens_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.payworks.ui.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="50dp"
                android:text="Welcome to Payworks"
                android:textSize="18sp"
                android:textStyle="normal" />

            <!--  <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <AutoCompleteTextView
                      android:id="@+id/email"
                      android:layout_width="match_parent"
                      android:layout_height="35dp"
                      android:hint="@string/prompt_email"
                      android:inputType="textEmailAddress"
                      android:maxLines="1"
                      android:singleLine="true" />

              </android.support.design.widget.TextInputLayout>

              <android.support.design.widget.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

                  <EditText
                      android:id="@+id/password"
                      android:layout_width="match_parent"
                      android:layout_height="35dp"
                      android:hint="@string/prompt_password"
                      android:imeActionId="@+id/login"
                      android:imeActionLabel="@string/action_sign_in_short"
                      android:imeOptions="actionUnspecified"
                      android:inputType="textPassword"
                      android:maxLines="1"
                      android:singleLine="true"
                      tools:ignore="InvalidImeActionId" />

              </android.support.design.widget.TextInputLayout>-->

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/contact_user18"
                android:background="@drawable/rectangular_background_white_border"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:drawablePadding="10dp"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                >
                <View style="@style/Divider_black" />
            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:drawablePadding="10dp"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/password18"
                android:background="@drawable/rectangular_background_white_border"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:textStyle="normal"
                tools:ignore="InvalidImeActionId" />

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:background="@color/button_color"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_your_password" />

                <TextView
                    android:id="@+id/click_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here" />

            </LinearLayout>

            <Button
                android:id="@+id/register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:drawableStart="@drawable/register18"
                android:layout_marginTop="50dp"
                android:paddingStart="5dp"
                android:textColor="@color/white"
                android:background="@color/resister_button_color"
                android:text="@string/action_register"
                android:textStyle="bold" />


            <com.facebook.login.widget.LoginButton xmlns:fb="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_with_facebook"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                fb:com_facebook_login_text="@string/action_sign_in_facebook" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/login_with_google"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:background="@color/button_color"
        android:gravity="center"
        android:text="Terms &amp; Policy"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:textStyle="bold" />
</RelativeLayout>
